(>) rename tp->tpc, tp_->tp

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,10 @@
 - runhaskell -itests/ tests/Spec.hs
 - 7 -- Basic=1, Type=0, Eval=1, Full=0, Parser=1, Run=0, Book=4, Gen=0
 
+- mudar type_ -> typec
+- renomear fcs todas de Type
+- voltar para refs
+
 - match ser obrigatorio com dcls de vars?
 - match ter um campo de INIT/Bool
     - em typesys, transformar accessos a tipos ref como
