--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,7 @@
 - runhaskell -itests/ tests/Spec.hs
 - 7 -- Basic=1, Type=0, Eval=1, Full=0, Parser=1, Run=0, Book=4, Gen=0
 
-- voltar para refs
+- new, verificar tpf
 
 - match ser obrigatorio com dcls de vars?
 - match ter um campo de INIT/Bool
