--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,12 @@
 - runhaskell -itests/ tests/Spec.hs
 - 7 -- Basic=1, Type=0, Eval=1, Full=0, Parser=1, Run=0, Book=4, Gen=0
 
+- mover FucnType para dentro de TFunc
+    - FuncClosure Int [IDS]
+        - precisa mudar o prototipo para incluir os IDS args
+- remover ref de TFunc
+    - é sempre ref
+
 - new, verificar tpf
     - new somente na criacao da closure
         - Full:
