--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
 - runhaskell -itests/ tests/Spec.hs
 - 7 -- Basic=1, Type=0, Eval=1, Full=0, Parser=1, Run=0, Book=4, Gen=0
 
+- testar arity mismatch em RunSpec
+
 - FuncClosure Int [IDS]
     - precisa mudar o prototipo para incluir os IDS args
 - remover ref de TFunc
