--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,9 @@
 - runhaskell -itests/ tests/Spec.hs
 - 9 -- Basic=1, Type=0, Eval=1, Full=0, Parser=0, Run=4, Book=3, Gen=0
 
+- SVar ter inicializacao opcional
+    - SMatch ainda vai precisar de isIni?
+
 - refazer GenSpec.hs
     - multiplas ifcs
 - pool
