(*) TODO SVar.ini

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
 - runhaskell -itests/ tests/Spec.hs
 - 9 -- Basic=1, Type=0, Eval=1, Full=0, Parser=0, Run=4, Book=3, Gen=0
 
+- voltar como SSet/SMatch.ini
 - SVar ter inicializacao opcional
     - SMatch ainda vai precisar de isIni?
 
