--- a/TODO.txt
+++ b/TODO.txt
@@ -584,7 +584,7 @@ data $IEq (eq,neq) for a with (                         // dclClassDicts
     (($IEq for a, a,a) -> Int),     // neq
 )
 
-func $neq$ ($dict,x,y) : (($IEq for a,a,a) -> Int) do    // dupRenImpls, insDict
+func _$neq$ ($dict,x,y) : (($IEq for a,a,a) -> Int) do    // dupRenImpls, insDict
     eq = func (x,y) : ((a,a) -> Int) do                 // insWrappers
             return $dict.eq($dict,x,y)
          end
