(>) Full.Class use TypeC instead of Type

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
 - runhaskell -itests/ tests/Spec.hs
 - 9 -- Basic=1, Type=0, Eval=1, Full=0, Parser=0, Run=4, Book=3, Gen=0
 
+- remover Class/Inst de Basic?
+
 - usar G* em TypeSys na hora do EVar
 
 - guardar em protos todos e os que nao colocar False
