--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,9 @@
 - runhaskell -itests/ tests/Spec.hs
 - 9 -- Basic=1, Type=0, Eval=1, Full=0, Parser=0, Run=4, Book=3, Gen=0
+                                                     10              3 (XXX)
+
+- Talvez nao precise de GGen|GNone no Basic, basta ver se fc possui ctrs
+    - multiple ctrs ja aparecem qd implementacao é para tipo que tem ctr
 
 - remover Class/Inst de Basic?
 
