--- a/TODO.txt
+++ b/TODO.txt
@@ -6,9 +6,14 @@
 - no gens = 119/703 erros
 
 - volto pra dict_typeclass
-    - refazer relacoes entre tipos
-        - considerar vars/constraints
-            - ir construindo tipo instanciando vars e verificando se as outras batem
+    x remove-refs
+        x remover refs
+    - type-gen-relates
+        - refazer relacoes entre tipos
+            - considerar vars/constraints
+                - ir construindo tipo instanciando vars e verificando se as outras batem
+    - gen-call
+        - fazer diff com gen-call para retomar o que ficou lá
 
 - gen-call
     - gera as funcoes concretas no momento do uso em TypeSys
